[package]

name = "rust-tcp-bw"
version = "0.0.0"
authors = ["Lorenzo Martini <lmartini@student.ethz.ch>"]
readme = "README.md"

description = "A Rust program to shove data through TCP sockets:"

[dependencies]
bytes = "*"
clap = "2"
streaming-harness-hdrhist = {git="https://github.com/utaal/hdrhist-rust"}
