[package]

name = "rust-tcp-latency"
version = "0.0.0"
authors = ["Lorenzo Martini <lmartini@student.ethz.ch>"]
readme = "README.md"

description = "A Rust program to measure roundtrip latency of a TCP socket connection"

[dependencies]
bytes = "*"
clap = "2"
core_affinity = "0.5.9"
streaming-harness-hdrhist = {git="https://github.com/utaal/hdrhist-rust"}
